--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,10 @@ body {
     display: flex;
     flex-direction: column;
     font-family: "Poppins", sans-serif;
+    height: 100vh;
+    overflow-x: hidden;
+
+   
 }
 
 .dropzone {
@@ -33,8 +37,8 @@ body {
 
 .box-entry {
     width: 600px;
-    height: 600px;
-    margin-top: 3em;
+    height: 90%
+    
 }
 
 .title-main {
@@ -87,8 +91,8 @@ body {
 
 .container {
 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgb(32, 32, 32);
     display: flex;
     justify-content: center;
@@ -104,7 +108,7 @@ form {
     flex-direction: column;
     gap: 1em;
     width: 800px;
-    height: 800px;
+    height: 90%;
     background-color: white;
 }
 
